[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/art/interactive/interactive/safe.png" type="Texture" id=1]
[ext_resource path="res://scenes/interact/FSNumberSafe.gd" type="Script" id=2]
[ext_resource path="res://assets/art/interactive/numbers/Numbers 7x10.png" type="Texture" id=3]
[ext_resource path="res://assets/art/interactive/interactive/safeWithoutFlashlight.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 7, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 14, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 21, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 28, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 35, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 42, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 49, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 56, 0, 7, 10 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 63, 0, 7, 10 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "change_num",
"speed": 5.0
} ]

[node name="FSNumberSafe" type="Popup"]
pause_mode = 2
margin_left = -1640.0
margin_top = -1655.0
margin_right = -1640.0
margin_bottom = -1655.0
rect_scale = Vector2( 10, 10 )
script = ExtResource( 2 )

[node name="Safe" type="Sprite" parent="."]
position = Vector2( 215, 195 )
texture = ExtResource( 1 )

[node name="SafeNum1" type="AnimatedSprite" parent="."]
position = Vector2( 203, 200 )
frames = SubResource( 11 )
animation = "change_num"

[node name="SafeNum2" type="AnimatedSprite" parent="."]
position = Vector2( 215, 200 )
frames = SubResource( 11 )
animation = "change_num"

[node name="SafeNum3" type="AnimatedSprite" parent="."]
position = Vector2( 227, 200 )
frames = SubResource( 11 )
animation = "change_num"

[node name="SafeWithoutFlashlight" type="Sprite" parent="."]
visible = false
position = Vector2( 215, 194.5 )
texture = ExtResource( 4 )

[connection signal="about_to_show" from="." to="." method="_on_FSNumberSafe_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_FSNumberSafe_popup_hide"]
